Allow line-wrapping of long URLs, to prevent viewport scaling problems on mobile.

--- a/app/_scss/_custom.scss
+++ b/app/_scss/_custom.scss
@@ -1,3 +1,8 @@
+// Prevent linked urls from breaking layouts
+a {
+  word-wrap: break-word !important;
+}
+
 ////////////////////////////////////// 
 // 1.0 Fonts
 //////////////////////////////////////
